[gd_scene load_steps=9 format=3 uid="uid://cj52gfxr3qu4e"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_6hrld"]
[ext_resource type="Texture2D" uid="uid://cib7ts7s1sqbk" path="res://assets/textures/bg.png" id="1_d2jts"]
[ext_resource type="PackedScene" uid="uid://cwojj7jncm76t" path="res://scenes/player.tscn" id="2_1cbu8"]
[ext_resource type="PackedScene" uid="uid://cb4ehu0wpgtj7" path="res://scenes/hud.tscn" id="2_llfsm"]
[ext_resource type="PackedScene" uid="uid://fx2ma2j3ioci" path="res://scenes/enemy_spawner.tscn" id="4_6iogy"]
[ext_resource type="AudioStream" uid="uid://c3gcnbyljbse0" path="res://assets/audio/hit.wav" id="6_4t0r3"]
[ext_resource type="AudioStream" uid="uid://chlr7j5x2n2ha" path="res://assets/audio/explode.wav" id="7_yuap4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0k7m3"]
size = Vector2(83, 873)

[node name="Game" type="Node2D"]
script = ExtResource("1_6hrld")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_llfsm")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_d2jts")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_1cbu8")]
position = Vector2(39, 360)
motion_mode = 1

[node name="EnemySpawner" parent="." instance=ExtResource("4_6iogy")]

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2(-285, -18)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(74.5, 379.5)
shape = SubResource("RectangleShape2D_0k7m3")

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4t0r3")

[node name="PlayerHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_yuap4")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_death_zone_area_entered"]
